# obisdian-tools

./: Makefile  README.md  config.py  obsidian.py  pyproject.toml  setup.cfg
src/obsidian/: config.py  daily.py  lib.py  main.py  publish.py
src/obsidian/markdown_ext/: linkify.py  tagging.py  wikilinks.py
src/obsidian/mistune_ext/: tagging.py  wikilinks.py
src/obsidian/publisher/: __init__.py  kb.py  note.py  tag.py  util.py
src/obsidian/templates/: _base.j2  _header.j2  note.j2  page.j2
