[tool.poetry]
name = "obsidian-tools"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]
packages = [{ include = "obsidian", from = "src" }]
include = ["src/**/*"]


[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.0.3"
requests = "^2.25.1"
devtools = "^0.6.1"
antidote = "^1.0.0"
fire = "^0.4.0"
rich = "^10.7.0"
Markdown = "^3.3.4"
Jinja2 = "^3.0.1"
types-Markdown = "^3.3.2"
types-requests = "^2.25.6"
bleach = "^4.0.0"
types-bleach = "^4.0.0"


[tool.poetry.dev-dependencies]
black = "^21.5b0"
isort = "^5.8.0"
mypy = "^0.910"
watchgod = "^0.7"


[tool.poetry.scripts]
obsidian = "obsidian.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
