[tool.poetry]
name = "obsidian-tools"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]
packages = [{ include = "obsidian", from = "src" }]
include = ["src/**/*"]


[tool.poetry.dependencies]
python = "^3.9"

antidote = "^1.0.0"
arrow = "^1.0.3"
bleach = "^4.0.0"
devtools = "^0.6.1"
fire = "^0.4.0"
jinja2 = "^3.0.1"
markdown = "^3.3.4"
requests = "^2.25.1"
rich = "^10.7.0"
mistune = "^2.0.2"


[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
watchgod = "*"

types-bleach = "*"
types-requests = "*"


[tool.poetry.scripts]
obsidian = "obsidian.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
